--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,12 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
+    curl,
     dplyr,
     lubridate,
     magrittr,
-    sf
+    sf,
+    stringr
 Depends: 
     R (>= 2.10)
 LazyData: true
