--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,6 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
-    curl,
     dplyr,
     leaflet,
     lubridate,
@@ -20,10 +19,11 @@ Imports:
     png,
     purrr,
     raster,
+    rnaturalearth,
+    rvest,
     sf,
-    sp,
     stringr,
-    terra
+    tidyr
 Depends: 
     R (>= 2.10)
 LazyData: true
