--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,3 +30,5 @@ LazyData: true
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/mstorey87/wfprogression
+BugReports: https://github.com/mstorey87/wfprogression/issues
