--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(fire_download_thredds)
+export(fire_geo_png)
 export(fire_process_polygon)
 export(fire_search_hotspots)
 export(fire_search_landsat)
