--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
     dplyr,
+    gdalcubes,
     leaflegend,
     leaflet,
     lubridate,
@@ -24,7 +25,10 @@ Imports:
     rvest,
     sf,
     stringr,
-    tidyr
+    tibble,
+    tidyr,
+    tools,
+    yaml
 Depends: 
     R (>= 2.10)
 LazyData: true
