Update function documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,15 @@
 export("%>%")
 export(fire_GIBS_products)
 export(fire_bbox_polygon)
+export(fire_download_copernicus)
+export(fire_download_stac)
 export(fire_download_thredds)
+export(fire_hotspot_map)
 export(fire_landsat_tif)
+export(fire_search_copernicus)
+export(fire_search_himawari)
 export(fire_search_hotspots)
+export(fire_search_stac)
+export(fire_sentinel3_tif)
 export(fire_thredds_list)
 importFrom(magrittr,"%>%")
