--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export("%>%")
 export(fire_GIBS_products)
 export(fire_bbox_polygon)
 export(fire_download_copernicus)
+export(fire_download_himiwari)
 export(fire_download_stac)
 export(fire_download_thredds)
+export(fire_get_timezone)
 export(fire_hotspot_map)
 export(fire_landsat_tif)
 export(fire_search_copernicus)
