--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(fire_save_GIBS_map)
 export(fire_search_copernicus)
 export(fire_search_himawari)
 export(fire_search_hotspots)
+export(fire_search_progs)
+export(fire_search_scans)
 export(fire_search_stac)
 export(fire_sentinel3_tif)
 export(fire_write_plot)
