--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ export(fire_search_progs)
 export(fire_search_scans)
 export(fire_search_stac)
 export(fire_sentinel3_tif)
+export(fire_thredds_list)
 export(fire_write_plot)
 importFrom(magrittr,"%>%")
