--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,7 @@ export(fire_search_stac)
 export(fire_sentinel3_tif)
 export(fire_thredds_list)
 export(fire_write_plot)
+export(fn_barra_path)
+export(fn_gg_map)
+export(fn_sample_nc)
 importFrom(magrittr,"%>%")
