--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export("%>%")
 export(fire_GIBS_map)
 export(fire_GIBS_products)
+export(fire_barra_path)
 export(fire_bbox_polygon)
 export(fire_download_copernicus)
 export(fire_download_himiwari)
 export(fire_download_stac)
 export(fire_get_timezone)
+export(fire_gg_map)
 export(fire_hotspot_map)
 export(fire_save_GIBS_map)
 export(fire_search_copernicus)
@@ -19,7 +21,5 @@ export(fire_search_stac)
 export(fire_sentinel3_tif)
 export(fire_thredds_list)
 export(fire_write_plot)
-export(fn_barra_path)
-export(fn_gg_map)
 export(fn_sample_nc)
 importFrom(magrittr,"%>%")
