Change barra sample fn name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(fire_GIBS_map)
 export(fire_GIBS_products)
 export(fire_barra_path)
+export(fire_barra_sample)
 export(fire_bbox_polygon)
 export(fire_download_copernicus)
 export(fire_download_himiwari)
@@ -21,5 +22,4 @@ export(fire_search_stac)
 export(fire_sentinel3_tif)
 export(fire_thredds_list)
 export(fire_write_plot)
-export(fn_sample_nc)
 importFrom(magrittr,"%>%")
