--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(fire_get_timezone)
 export(fire_gg_map)
 export(fire_hotspot_map)
 export(fire_max_spread_line)
+export(fire_read_scan)
 export(fire_save_GIBS_map)
 export(fire_search_copernicus)
 export(fire_search_himawari)
