create new function to sample barra data in loop, relying on other barra functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(fire_GIBS_products)
 export(fire_RANN_nearest_points)
 export(fire_barra_path)
 export(fire_barra_sample)
+export(fire_barra_sample_all)
 export(fire_bbox_polygon)
 export(fire_download_copernicus)
 export(fire_download_himiwari)
