update fire search drops documents

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(fire_max_spread_line)
 export(fire_read_scan)
 export(fire_save_GIBS_map)
 export(fire_search_copernicus)
+export(fire_search_drops)
 export(fire_search_himawari)
 export(fire_search_hotspots)
 export(fire_search_progs)
