new function to get line direction and start and end coordinates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(fire_bbox_polygon)
 export(fire_download_copernicus)
 export(fire_download_himiwari)
 export(fire_download_stac)
+export(fire_get_line_info)
 export(fire_get_timezone)
 export(fire_gg_map)
 export(fire_hotspot_map)
