--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,5 +27,6 @@ export(fire_search_scans)
 export(fire_search_stac)
 export(fire_sentinel3_tif)
 export(fire_thredds_list)
+export(fire_wms_to_tif_python)
 export(fire_write_plot)
 importFrom(magrittr,"%>%")
