create new hotspot map function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(fire_get_line_info)
 export(fire_get_timezone)
 export(fire_gg_map)
 export(fire_hotspot_map)
+export(fire_hotspot_map_py)
+export(fire_hotspot_map_v2)
 export(fire_max_spread_line)
 export(fire_read_scan)
 export(fire_save_GIBS_map)
