--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,8 @@ export(fire_copernicus_search)
 export(fire_get_line_info)
 export(fire_get_timezone)
 export(fire_gg_map)
+export(fire_himawari_download)
 export(fire_himawari_search)
-export(fire_himiwari_download)
 export(fire_hotspot_map)
 export(fire_max_spread_line)
 export(fire_read_scan)
