fire stac veg search

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(fire_search_progs)
 export(fire_search_scans)
 export(fire_sentinel3_tif)
 export(fire_stac_download)
+export(fire_stac_sample_veg)
 export(fire_stac_search)
 export(fire_thredds_list)
 export(fire_wms_to_tif_python)
