--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,4 +28,5 @@ export(fire_stac_search)
 export(fire_thredds_list)
 export(fire_wms_to_tif_python)
 export(fire_write_plot)
+export(uv2ds)
 importFrom(magrittr,"%>%")
