--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,26 +15,23 @@ Depends:
     R (>= 3.5)
 Imports: 
     checkmate,
-    curl,
     DBI,
     dplyr,
-    gdalcubes,
     geosphere,
     ggplot2,
     ggspatial,
+    graphics,
+    grDevices,
     httr,
-    leaflegend,
-    leaflet,
     lubridate,
     magick,
     magrittr,
-    mapedit,
-    mapview,
     png,
     purrr,
     RANN,
-    raster,
+    RColorBrewer,
     readr,
+    reticulate,
     RPostgres,
     rstac,
     rvest,
@@ -47,11 +44,10 @@ Imports:
     tibble,
     tidync,
     tidyr,
+    tmap,
     tools,
-    webshot,
-    yaml
-Suggests: 
-    testthat (>= 3.0.0)
+    units,
+    utils
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
