--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(fire_himawari_search)
 export(fire_hotspot_map)
 export(fire_max_spread_line)
 export(fire_read_scan)
+export(fire_sample_agcd)
 export(fire_search_drops)
 export(fire_search_hotspots)
 export(fire_search_progs)
