create safe tidy nc function. add notes to barra sample all functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(fire_stac_download)
 export(fire_stac_sample_veg)
 export(fire_stac_search)
 export(fire_thredds_list)
+export(fire_tidync_safe)
 export(fire_wms_to_tif_python)
 export(fire_write_plot)
 export(uv2ds)
