update comments  and add examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,15 +10,17 @@ export(fire_barra_sample_all)
 export(fire_bbox_polygon)
 export(fire_get_line_info)
 export(fire_get_timezone)
+export(fire_gg_map)
 export(fire_himawari_download)
 export(fire_himawari_search)
 export(fire_hotspot_map)
 export(fire_max_spread_line)
 export(fire_read_scan)
+export(fire_sample_agcd)
 export(fire_search_drops)
 export(fire_search_hotspots)
+export(fire_search_images)
 export(fire_search_progs)
-export(fire_search_scans)
 export(fire_sentinel3_tif)
 export(fire_stac_download)
 export(fire_stac_sample_veg)
@@ -26,6 +28,5 @@ export(fire_stac_search)
 export(fire_thredds_list)
 export(fire_tidync_safe)
 export(fire_wms_to_tif_python)
-export(fire_write_plot)
 export(uv2ds)
 importFrom(magrittr,"%>%")
