update wind speed function example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,6 @@ export(fire_stac_sample_veg)
 export(fire_stac_search)
 export(fire_thredds_list)
 export(fire_tidync_safe)
+export(fire_uv2ds)
 export(fire_wms_to_tif_python)
-export(uv2ds)
 importFrom(magrittr,"%>%")
