--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(fire_search_drops)
 export(fire_search_hotspots)
 export(fire_search_images)
 export(fire_search_progs)
+export(fire_search_ros)
 export(fire_sentinel3_tif)
 export(fire_stac_download)
 export(fire_stac_sample_veg)
