function to read fire scan plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(fire_himawari_download)
 export(fire_himawari_search)
 export(fire_hotspot_map)
 export(fire_max_spread_line)
+export(fire_read_plot)
 export(fire_read_scan)
 export(fire_sample_agcd)
 export(fire_search_drops)
